--- a/Session1.ipynb
+++ b/Session1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOY9A+r9caf6+TgV1ErD8Bs",
+      "authorship_tag": "ABX9TyNNHWzLDu1KpurfD7ed1vv+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,47 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ShailendraPython/Python-Practice/blob/main/Session1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#Arithmetic\n",
+        "\n",
+        "a=8\n",
+        "b=6\n",
+        "\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a/b)\n",
+        "print(a//b)\n",
+        "print(a%b)\n",
+        "print(a**b)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xQgzptu0BtXw",
+        "outputId": "2cfd27bf-e9ba-4d10-c085-77db7b5ea7da"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14\n",
+            "2\n",
+            "48\n",
+            "1.3333333333333333\n",
+            "1\n",
+            "2\n",
+            "262144\n"
+          ]
+        }
       ]
     },
     {
